fixed some background overflow and burger menu too big on tablet

--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 body {
   background: url("./images/background-home-desktop.jpg") no-repeat;
   background-size: cover;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 .homebody {
@@ -55,12 +55,11 @@ body {
   transition: box-shadow 0.5s ease;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1330px) {
   body {
     background: url("./images/background-home-tablet.jpg") no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
     height: 100vh;
-    background-size: 100vh;
     margin: 0 auto;
     position: absolute;
     overflow-x: hidden;
